--- a/Arifacts.ProjectDemo/pom.xml
+++ b/Arifacts.ProjectDemo/pom.xml
@@ -3,4 +3,18 @@
   <groupId>Artifacts.ProjectDemo</groupId>
   <artifactId>Arifacts.ProjectDemo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+   <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>3.11.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>1.3</version>
+</dependency>
+     
+    </dependencies>
 </project>
